Minor documentation biffs.

--- a/README
+++ b/README
@@ -81,12 +81,12 @@ METHODS:
 
     new([filename|filepointer],[enumerate])
 
-    Creates a new Text::TabFile object. Takes optional parameter that is
+    Creates a new Text::Delimited object. Takes optional parameter that is
     either a filename or a globbed filehandle. Files specified by filename
     must already exist.
 
     Can optionally take a second argument. If this argument evaluates to
-    true, TabFile.pm will append a _NUM to the end of all fields with
+    true, Text::Delimited will append a _NUM to the end of all fields with
     duplicate names. That is, if your header row contains 2 columns named
     "NAME", one will be changed to NAME_1, the other to NAME_2.
 
@@ -97,7 +97,7 @@ METHODS:
     succeeds.
 
     Can optionally take a second argument. If this argument evaluates to
-    true, TabFile.pm will append a _NUM to the end of all fields with
+    true, Text::Delimited will append a _NUM to the end of all fields with
     duplicate names. That is, if your header row contains 2 columns named
     "NAME", one will be changed to NAME_1, the other to NAME_2.
 
@@ -116,7 +116,7 @@ METHODS:
 
     setmode(encoding)
 
-    Set the given encoding scheme on the tabfile to allow for reading files
+    Set the given encoding scheme on the input file to allow for reading files
     encoded in standards other than ASCII.
 
 ================================================================================
@@ -124,19 +124,19 @@ EXPORTABLE METHODS:
 ================================================================================
 
     For convienience, the following methods are exportable. These are handy
-    for quickly writing output tab files.
+    for quickly writing output delimited files.
 
-    tj(@STUFF)
-    Tab Join. Returns the given array as a string joined with tabs.
+    d_join(@STUFF)
+    Delimited Join. Returns the given array as a string joined with the 
+    current delimiter.
 
-    tl(@STUFF)
-    Tab Line. Returns the given array as a string joined with tabs (with
-    newline appended).
+    d_line(@STUFF)
+    Delimited Line. Returns the given array as a string joined with the 
+    current delimiter and with newline appended.
 
 ================================================================================
 AUTHORSHIP:
 ================================================================================
-
 
     Text::Delimited v2.00 2006/07/31
 
