--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 
-         Text::Delimited - Delimited Text Processing Module - v 2.00
+         Text::Delimited - Delimited Text Processing Module - VERSIONTAG
 
 ================================================================================
 SYNOPSIS:
@@ -138,9 +138,9 @@ EXPORTABLE METHODS:
 AUTHORSHIP:
 ================================================================================
 
-    Text::Delimited v2.00 2006/07/31
+    Text::Delimited VERSIONTAG DATETAG
 
-    (c) 2004-2006, Phillip Pollard <bennie@cpan.org>
+    (c) 2004-YEARTAG, Phillip Pollard <bennie@cpan.org>
     Released under the Perl Artistic License
 
     I'd like to thank PetBlvd for sponsoring continued work on this module.
