--- a/Changes
+++ b/Changes
@@ -2,6 +2,10 @@ Revision history for Perl extension Text::Delimited.
 
 VERSIONTAG  DATETAG
 
+	Meta information updated
+	
+	Added LICENSE file to distribution
+
 	Tests updated to Test::Simple.
 
 	Version leap to match automated build numbers.
